Namespace created, swagger generation doesn't fail but no namespace is generated
