# txmatching/web/swagger/swagger.yaml
@@ -519,51 +519,6 @@ definitions:
         - ZMB
         - ZWE
         type: string
-    CrossmatchInput:
-        properties:
-            donor_hla_typing:
-                description: HLA typing of the patient. Use high resolution if available.
-                example: &id003
-                - A1
-                - A32
-                - B7
-                - B51
-                - DR11
-                - DR15
-                - A*02:03
-                - A*11:01:35
-                - DPA1*01:07
-                - DRB4*01:01
-                - DQB1*02:01:01:01
-                items:
-                    type: string
-                type: array
-            recipient_antibodies:
-                description: Detected HLA antibodies of the patient. Use high resolution
-                    if available. If high resolution is provided it is assumed that
-                    all tested antibodies were provided. If not it is assumed that
-                    either all or just positive ones were.
-                items:
-                    $ref: '#/definitions/HLAAntibodyIn'
-                type: array
-        required:
-        - donor_hla_typing
-        - recipient_antibodies
-        type: object
-    CrossmatchOutput:
-        properties:
-            hla_to_antibody:
-                items:
-                    $ref: '#/definitions/HlaToAntibodyMatch'
-                type: array
-            parsing_issues:
-                items:
-                    $ref: '#/definitions/ParsingIssueBase'
-                type: array
-        required:
-        - hla_to_antibody
-        - parsing_issues
-        type: object
     CycleOrChain:
         properties:
             patients:
@@ -642,7 +597,7 @@ definitions:
                     Group compatibility
 
                     index is calculated for.'
-                example: &id018
+                example: &id017
                 -   antibody_matches:
                     -   hla_antibody:
                             code: &id002
@@ -702,7 +657,7 @@ definitions:
                 type: array
             donor_type:
                 $ref: '#/definitions/DonorType'
-            etag: &id005
+            etag: &id004
                 description: Number of updates of a patient
                 example: 1
                 type: integer
@@ -737,33 +692,44 @@ definitions:
         type: object
     DonorInput:
         properties:
-            blood_group: &id004
+            blood_group: &id003
                 $ref: '#/definitions/BloodGroupEnum'
             donor_type:
                 $ref: '#/definitions/DonorType'
-            height: &id006
+            height: &id005
                 description: Height of the patient in centimeters.
                 example: 178
                 type: integer
-            hla_typing: &id013
+            hla_typing: &id012
                 description: HLA typing of the patient. Use high resolution if available.
-                example: *id003
+                example:
+                - A1
+                - A32
+                - B7
+                - B51
+                - DR11
+                - DR15
+                - A*02:03
+                - A*11:01:35
+                - DPA1*01:07
+                - DRB4*01:01
+                - DQB1*02:01:01:01
                 items:
                     type: string
                 type: array
-            internal_medical_id: &id014
+            internal_medical_id: &id013
                 description: Custom medical ID that will not be shown in UI, but will
                     be stored and can be seen in patient xlsx export.
                 example: '123456'
                 type: string
-            medical_id: &id012
+            medical_id: &id011
                 description: Medical ID of the patient. This ID is unique thorough
                     the system and can be used for the identification of a specific
                     patient in your system. Typically, this is the patient ID used
                     in your internal system.
                 example: D1037
                 type: string
-            note: &id007
+            note: &id006
                 default: ''
                 example: donor note
                 type: string
@@ -772,13 +738,13 @@ definitions:
                     and non-directed donors.
                 example: R1037
                 type: string
-            sex: &id008
+            sex: &id007
                 $ref: '#/definitions/SexEnum'
-            weight: &id009
+            weight: &id008
                 description: Weight of the patient in kilograms.
                 example: 78.4
                 type: number
-            year_of_birth: &id010
+            year_of_birth: &id009
                 description: Year of birth of the patient.
                 example: 1945
                 type: integer
@@ -1042,18 +1008,6 @@ definitions:
         - BROAD
         - SPLIT_AND_BROAD
         type: string
-    HlaToAntibodyMatch:
-        properties:
-            antibody_matches:
-                items:
-                    $ref: '#/definitions/AntibodyMatch'
-                type: array
-            hla_code:
-                type: string
-        required:
-        - antibody_matches
-        - hla_code
-        type: object
     HlaType:
         properties:
             code:
@@ -1303,37 +1257,6 @@ definitions:
         - parsing_issue_detail
         - txm_event_id
         type: object
-    ParsingIssueBase:
-        properties:
-            hla_code_or_group:
-                type: string
-            message:
-                type: string
-            parsing_issue_detail:
-                enum:
-                - SUCCESSFULLY_PARSED
-                - HIGH_RES_WITHOUT_SPLIT
-                - HIGH_RES_WITH_LETTER
-                - HIGH_RES_WITH_ASSUMED_SPLIT_CODE
-                - MULTIPLE_SPLITS_OR_BROADS_FOUND
-                - IRRELEVANT_CODE
-                - UNEXPECTED_SPLIT_RES_CODE
-                - UNKNOWN_TRANSFORMATION_FROM_HIGH_RES
-                - UNPARSABLE_HLA_CODE
-                - MORE_THAN_TWO_HLA_CODES_PER_GROUP
-                - BASIC_HLA_GROUP_IS_EMPTY
-                - ALL_ANTIBODIES_ARE_POSITIVE_IN_HIGH_RES
-                - INSUFFICIENT_NUMBER_OF_ANTIBODIES_IN_HIGH_RES
-                - MULTIPLE_CUTOFFS_PER_ANTIBODY
-                - MFI_PROBLEM
-                - OTHER_PROBLEM
-                example: SUCCESSFULLY_PARSED
-                type: string
-        required:
-        - hla_code_or_group
-        - message
-        - parsing_issue_detail
-        type: object
     ParsingIssuePublic:
         properties:
             hla_code_or_group:
@@ -1387,13 +1310,13 @@ definitions:
         type: object
     PatientModelToUpdate:
         properties:
-            blood_group: *id004
-            db_id: &id011
+            blood_group: *id003
+            db_id: &id010
                 description: Database id of the patient
                 example: 1
                 type: integer
-            etag: *id005
-            height: *id006
+            etag: *id004
+            height: *id005
             hla_typing:
                 allOf:
                 -   $ref: '#/definitions/HlaTypingToUpdate'
@@ -1404,10 +1327,10 @@ definitions:
                     -   raw_code: A*01:02
                     -   raw_code: B7
                     -   raw_code: DR11
-            note: *id007
-            sex: *id008
-            weight: *id009
-            year_of_birth: *id010
+            note: *id006
+            sex: *id007
+            weight: *id008
+            year_of_birth: *id009
         required:
         - blood_group
         - db_id
@@ -1498,14 +1421,14 @@ definitions:
                 type: array
             all_messages:
                 $ref: '#/definitions/AllMessages'
-            db_id: *id011
-            etag: *id005
+            db_id: *id010
+            etag: *id004
             hla_antibodies:
                 $ref: '#/definitions/HlaAntibodies'
             internal_medical_id:
                 description: Internal medical id of the patient
                 type: string
-            medical_id: *id012
+            medical_id: *id011
             parameters:
                 $ref: '#/definitions/PatientParameters'
             parsing_issues:
@@ -1558,7 +1481,7 @@ definitions:
         type: object
     RecipientInput:
         properties:
-            acceptable_blood_groups: &id015
+            acceptable_blood_groups: &id014
                 description: Acceptable blood groups for the patient. Leave empty
                     to use compatible blood groups.
                 example:
@@ -1567,8 +1490,8 @@ definitions:
                 items:
                     $ref: '#/definitions/BloodGroupEnum'
                 type: array
-            blood_group: *id004
-            height: *id006
+            blood_group: *id003
+            height: *id005
             hla_antibodies:
                 description: Detected HLA antibodies of the patient. Use high resolution
                     if available. If high resolution is provided it is assumed that
@@ -1577,23 +1500,23 @@ definitions:
                 items:
                     $ref: '#/definitions/HLAAntibodyIn'
                 type: array
-            hla_typing: *id013
-            internal_medical_id: *id014
-            medical_id: *id012
-            note: *id007
-            previous_transplants: &id016
+            hla_typing: *id012
+            internal_medical_id: *id013
+            medical_id: *id011
+            note: *id006
+            previous_transplants: &id015
                 description: Number of previous kidney transplants.
                 example: 0
                 type: integer
-            sex: *id008
-            waiting_since: &id017
+            sex: *id007
+            waiting_since: &id016
                 description: Date since when the patient has been on waiting list.
                     Use format YYYY-MM-DD.
                 example: '2015-01-17'
                 format: date
                 type: string
-            weight: *id009
-            year_of_birth: *id010
+            weight: *id008
+            year_of_birth: *id009
         required:
         - blood_group
         - hla_antibodies
@@ -1604,7 +1527,7 @@ definitions:
         allOf:
         -   $ref: '#/definitions/PatientModelToUpdate'
         -   properties:
-                acceptable_blood_groups: *id015
+                acceptable_blood_groups: *id014
                 cutoff:
                     type: integer
                 hla_antibodies:
@@ -1616,7 +1539,7 @@ definitions:
                         hla_antibodies_list:
                         -   mfi: 10000
                             raw_code: A*01:02
-                previous_transplants: *id016
+                previous_transplants: *id015
                 recipient_requirements:
                     allOf:
                     -   $ref: '#/definitions/RecipientRequirements'
@@ -1624,7 +1547,7 @@ definitions:
                         it will be overwritten
                     example:
                         require_better_match_in_compatibility_index: true
-                waiting_since: *id017
+                waiting_since: *id016
             type: object
     RecipientRequirements:
         properties:
@@ -1741,7 +1664,7 @@ definitions:
                     Group compatibility
 
                     index is calculated for.'
-                example: *id018
+                example: *id017
                 items:
                     $ref: '#/definitions/DetailedScoreForGroup'
                 type: array
@@ -2103,41 +2026,6 @@ paths:
             -   bearer: []
             tags:
             - optimizer
-    /v1/public/do-crossmatch:
-        post:
-            operationId: post_txm_event_do_crossmatch
-            parameters:
-            -   in: body
-                name: payload
-                required: true
-                schema:
-                    $ref: '#/definitions/CrossmatchInput'
-            responses:
-                '200':
-                    description: Success
-                    schema:
-                        $ref: '#/definitions/CrossmatchOutput'
-                '400':
-                    description: Wrong data format.
-                    schema:
-                        $ref: '#/definitions/FailResponse'
-                '401':
-                    description: Authentication failed.
-                    schema:
-                        $ref: '#/definitions/FailResponse'
-                '403':
-                    description: Access denied. You do not have rights to access this
-                        endpoint.
-                    schema:
-                        $ref: '#/definitions/FailResponse'
-                '500':
-                    description: Unexpected error, see contents for details.
-                    schema:
-                        $ref: '#/definitions/FailResponse'
-            security:
-            -   bearer: []
-            tags:
-            - public
     /v1/public/patient-upload:
         put:
             description: This endpoint allows the country editor to upload patient
